--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "flux": "^3.1.2",
     "gulp-babel": "^6.1.2",
     "gulp-open": "^2.0.0",
+    "immutable": "^3.8.1",
     "moment": "^2.18.1",
     "react": "^15.3.0",
     "react-bootstrap": "^0.31.0",
