--- a/package.json
+++ b/package.json
@@ -11,26 +11,46 @@
   "dependencies": {
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
-    "fixed-data-table-2": "^0.7.14",
+    "events": "^1.1.1",
+    "fixed-data-table-2": "^0.7.16",
     "flux": "^3.1.2",
     "gulp-babel": "^6.1.2",
     "gulp-open": "^2.0.0",
     "immutable": "^3.8.1",
+    "immutable-diff": "^0.1.1",
+    "immutablediff": "^0.4.4",
     "moment": "^2.18.1",
-    "react": "^15.3.0",
+    "querystring-es3": "^0.2.1",
+    "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
-    "react-dom": "^15.3.0"
+    "react-dom": "^15.5.4",
+    "stream-http": "^2.7.1"
   },
   "devDependencies": {
     "babel": "^6.23.0",
-    "babel-cli": "^6.24.0",
+    "babel-cli": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-env": "^1.3.3",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-es2016": "^6.22.0",
     "babel-preset-latest": "^6.24.0",
-    "babel-preset-react": "^6.11.1",
-    "browserify": "^13.3.0"
+    "babel-preset-react": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browser-pack": "^6.0.2",
+    "browserify": "^13.3.0",
+    "console-browserify": "^1.1.0",
+    "constants-browserify": "^1.0.0",
+    "crypto-browserify": "^3.11.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.0.0",
+    "gulp-open": "^2.0.0",
+    "gulp-util": "^3.0.8",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "0.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
