--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
+    "sockjs-client": "^1.1.4",
+    "stompjs": "^2.3.3",
     "stream-http": "^2.7.1"
   },
   "devDependencies": {
