Add simple line chart.

--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "immutablediff": "^0.4.4",
     "moment": "^2.18.1",
     "querystring-es3": "^0.2.1",
-    "react": "^15.5.4",
+    "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
+    "recharts": "^1.0.0-alpha.2",
     "sockjs-client": "^1.1.4",
     "stompjs": "^2.3.3",
     "stream-http": "^2.7.1"
